🐛 overflow fix

--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -24,7 +24,7 @@ body {
   overflow: hidden;
 
   &.--animated {
-    overflow: visible;
+    overflow-y: visible;
   }
 }
 
@@ -39,16 +39,22 @@ body {
 }
 
 .container {
-  padding: 0 rem(40);
   margin-bottom: rem(40);
+  padding: 0 rem(40);
 
   &:last-of-type {
     margin-bottom: 0;
   }
 
   @include tablet {
-    padding: 0 rem(100);
     margin-bottom: rem(100);
+    padding: 0 rem(100);
+  }
+
+  @include desktop {
+    margin: 0 auto rem(100);
+    max-width: rem(1320);
+    padding: 0 rem(300);
   }
 }
 
